--- a/packaging/windows/packages/com.consolinno.energy/meta/package.xml
+++ b/packaging/windows/packages/com.consolinno.energy/meta/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package>
-    <DisplayName>Consolinno energy</DisplayName>
-    <Description>Install consolinno energy.</Description>
-    <Version>0.1.0-1</Version>
-    <ReleaseDate>2020-03-30</ReleaseDate>
+    <DisplayName>alpha innotec configuration wizard</DisplayName>
+    <Description>Install alpha innotec configuration wizard from consolinno energy</Description>
+    <Version>1.0.0-1</Version>
+    <ReleaseDate>2022-02-07</ReleaseDate>
     <Licenses>
         <License name="GNU General Public License Agreement v2" file="license-gpl.txt" />
     </Licenses>
