--- a/packaging/linux-common/consolinno-energy.desktop
+++ b/packaging/linux-common/consolinno-energy.desktop
@@ -4,4 +4,4 @@ Comment=A client application for Leaflets
 Icon=/usr/share/icons/hicolor/256x256/apps/consolinno-energy.png
 Terminal=false
 Type=Application
-Exec=consolinno-energy
+Exec=consolinno-energy-alpha-innotec
