--- a/packaging/osx/Info.plist.in
+++ b/packaging/osx/Info.plist.in
@@ -7,7 +7,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>Consolinno energy</string>
 	<key>CFBundleExecutable</key>
-	<string>consolinno-energy</string>
+	<string>consolinno-energy-alpha-innotec</string>
 	<key>CFBundleIconFile</key>
         <string>AppIcon.icns</string>
 	<key>CFBundleIdentifier</key>
