Fix appimage desktop file

--- a/packaging/appimage/consolinno-energy.desktop
+++ b/packaging/appimage/consolinno-energy.desktop
@@ -3,5 +3,6 @@ Name=Consolinno Alpha Innotec Wizard
 Comment=A client application for the Consolinno KNW system
 Icon=consolinno-energy
 Terminal=false
-Type=consolinno-energy-alpha-innotec
+Type=Application
+Exec=AlphaInnotecConnectionWizard
 Categories=Network;
