Replace some Android support.v4 with androidx libraries

--- a/packaging/android/build.gradle
+++ b/packaging/android/build.gradle
@@ -15,8 +15,8 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
-        classpath 'com.google.gms:google-services:3.2.0'
+        classpath 'com.android.tools.build:gradle:4.2.0'
+        classpath 'com.google.gms:google-services:4.3.8'
     }
 }
 
@@ -39,6 +39,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'org.reactivestreams:reactive-streams:1.0.3'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
+    implementation 'androidx.core:core:1.3.2'
 
     if ("${useFirebase}" == "true") {
         implementation 'com.google.android.gms:play-services-base:15.0.1'
